Исправил ошибки при проверке загрузки модальных окон на страницу. К модальным окнам информаций о пользователе добавил передаваемые с сервера value.

--- a/src/main/resources/templates/users/modal/user-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/user-info-editing-modal.html
@@ -16,19 +16,19 @@
                         <form id="user-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="lastname" class="form-label">Фамилия</label>
-                                <input type="text" name="lastname" id="lastname" class="form-control" placeholder="Иванов" />
+                                <input type="text" name="lastname" id="lastname" class="form-control" placeholder="Иванов" th:value="${user.userInformation.lastname}" />
                             </div>
                             <div class="mb-3">
                                 <label for="name" class="form-label">Имя</label>
-                                <input type="text" name="name" id="name" class="form-control" placeholder="Иван" />
+                                <input type="text" name="name" id="name" class="form-control" placeholder="Иван" th:value="${user.userInformation.name}" />
                             </div>
                             <div class="mb-3">
                                 <label for="patronymic" class="form-label">Отчество</label>
-                                <input type="text" name="patronymic" id="patronymic" class="form-control" placeholder="Иванович" />
+                                <input type="text" name="patronymic" id="patronymic" class="form-control" placeholder="Иванович" th:value="${user.userInformation.patronymic}" />
                             </div>
                             <div class="mb-3">
                                 <label for="phone-number" class="form-label">Номер телефона</label>
-                                <input type="text" name="phoneNumber" id="phone-number" class="form-control" placeholder="89212345901" />
+                                <input type="text" name="phoneNumber" id="phone-number" class="form-control" placeholder="89212345901" th:value="${user.userInformation.phoneNumber}" />
                             </div>
                             <div class="mb-3">
                                 <p class="form-label">Пол</p>
@@ -41,7 +41,7 @@
                             </div>
                             <div class="mb-4">
                                 <label for="birthdate" class="form-label">Дата рождения</label>
-                                <input type="date" name="birthdate" id="birthdate" class="form-control" />
+                                <input type="date" name="birthdate" id="birthdate" class="form-control" th:value="${user.userInformation.birthdate}" />
                             </div>
                             <button type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
                         </form>
