--- a/src/main/resources/templates/users/modal/employee-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/employee-info-editing-modal.html
@@ -16,7 +16,7 @@
                         <form id="employee-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-4">
                                 <label for="post" class="form-label">Должность</label>
-                                <input type="text" name="post" id="post" class="form-control" placeholder="Секретарь" />
+                                <input type="text" name="post" id="post" class="form-control" placeholder="Секретарь" th:value="${user.employeeInformation.post}" />
                             </div>
                             <button type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
                         </form>
