--- a/src/main/resources/templates/users/modal/login-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/login-info-editing-modal.html
@@ -16,7 +16,7 @@
                         <form id="login-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Почта</label>
-                                <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
+                                <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" th:value="${user.userSecurityInformation.email}" />
                             </div>
                             <div class="d-flex flex-row align-items-center justify-content-between mb-3">
                                 <p class="mb-0">Изменить пароль?</p>
