Написал js-код для работы с редактированием информации профиля и для изменения активности пользователя (пока черновик). Поправил URL в контроллере редактирования профиля.

--- a/src/main/resources/templates/users/modal/login-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/login-info-editing-modal.html
@@ -29,7 +29,7 @@
                                 <label for="password" class="form-label">Пароль</label>
                                 <input type="password" name="password" id="password" class="form-control" placeholder="@strong!Password123@" />
                             </div>
-                            <button type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
+                            <button id="login-info-editing-submit" type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
                         </form>
                     </div>
                     <div class="modal-footer">
