--- a/src/main/resources/templates/users/modal/user-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/user-info-editing-modal.html
@@ -43,7 +43,7 @@
                                 <label for="birthdate" class="form-label">Дата рождения</label>
                                 <input type="date" name="birthdate" id="birthdate" class="form-control" th:value="${user.userInformation.birthdate}" />
                             </div>
-                            <button type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
+                            <button id="user-info-editing-submit" type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
                         </form>
                     </div>
                     <div class="modal-footer">
