--- a/src/main/resources/templates/users/modal/employee-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/employee-info-editing-modal.html
@@ -18,7 +18,7 @@
                                 <label for="post" class="form-label">Должность</label>
                                 <input type="text" name="post" id="post" class="form-control" placeholder="Секретарь" th:value="${user.employeeInformation.post}" />
                             </div>
-                            <button type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
+                            <button id="employee-info-editing-submit" type="submit" class="btn btn-primary mb-2">Сохранить изменения</button>
                         </form>
                     </div>
                     <div class="modal-footer">
