Добавил hidden-id к формам редактирования пользовательской информации. Добавил его использование в js.

--- a/src/main/resources/templates/users/modal/login-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/login-info-editing-modal.html
@@ -14,6 +14,7 @@
                     </div>
                     <div class="modal-body fs-5" id="login-info-editing-modal-text">
                         <form id="login-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <input type="hidden" name="id" th:value="${user.userSecurityInformation.id}" />
                             <div class="mb-3">
                                 <label for="email" class="form-label">Почта</label>
                                 <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" th:value="${user.userSecurityInformation.email}" />
