--- a/src/main/resources/templates/users/modal/employee-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/employee-info-editing-modal.html
@@ -14,6 +14,7 @@
                     </div>
                     <div class="modal-body fs-5" id="employee-info-editing-modal-text">
                         <form id="employee-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
+                            <input type="hidden" name="id" th:value="${user.employeeInformation.id}" />
                             <div class="mb-4">
                                 <label for="post" class="form-label">Должность</label>
                                 <input type="text" name="post" id="post" class="form-control" placeholder="Секретарь" th:value="${user.employeeInformation.post}" />
