--- a/src/main/resources/templates/users/modal/login-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/login-info-editing-modal.html
@@ -13,6 +13,11 @@
                         <button id="login-info-editing-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5" id="login-info-editing-modal-text">
+                        <div class="visually-hidden mb-3" id="login-info-editing-error">
+                            <div class="text-center fs-5 danger-block rounded h-100">
+                                <p class="mb-1 my-auto">Заполняемый текст</p>
+                            </div>
+                        </div>
                         <form id="login-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <input type="hidden" name="id" th:value="${user.userSecurityInformation.id}" />
                             <div class="mb-3">
