--- a/src/main/resources/templates/users/modal/user-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/user-info-editing-modal.html
@@ -38,10 +38,10 @@
                             </div>
                             <div class="mb-3">
                                 <p class="form-label">Пол</p>
-                                <div class="form-check" th:each="each, status : ${genders}" id="gender">
+                                <div class="form-check" th:each="each : ${genders}" id="gender">
                                     <div>
-                                        <label class="form-check-label" th:for="'gender-radio-' + ${status.index}"></label>
-                                        <input th:id="'gender-radio-' + ${status.index}" type="radio" class="form-check-input" th:text="${each.alias}" th:value="${each}" name="gender" th:checked="${each == user.userInformation.gender}" />
+                                        <label class="form-check-label" th:for="${each}"></label>
+                                        <input th:id="${each}" type="radio" class="form-check-input" th:text="${each.alias}" th:value="${each}" name="gender" th:checked="${each == user.userInformation.gender}" />
                                     </div>
                                 </div>
                             </div>
