--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -23,7 +23,53 @@
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                         <h1 class="fs-3 m-2 m-md-0">Список медицинских учреждений</h1>
                         <div class="m-2 m-md-0">
-                            <button class="btn btn-lg btn-primary">Фильтр</button>
+                            <button class="btn btn-lg btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filter" aria-expanded="false" aria-controls="filter">Фильтр</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="row">
+                <div class="col-12">
+                    <div id="filter" class="collapse multi-collapse">
+                        <div class="filter rounded fs-6 p-3 mb-5">
+                            <div class="d-flex flex-row flex-wrap align-items-center justify-content-between">
+                                <div>
+                                    <h6 class="fs-5">Фильтрация</h6>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" />
+                                        <label class="form-check-label" for="flexRadioDefault1"> Ожидают выдачи кода </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked />
+                                        <label class="form-check-label" for="flexRadioDefault2"> Ожидают регистрации администратора </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" />
+                                        <label class="form-check-label" for="flexRadioDefault3"> Зарегистрированы </label>
+                                    </div>
+                                </div>
+                                <div class="mx-1">
+                                    <h6 class="fs-5">Сортировка</h6>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4" />
+                                        <label class="form-check-label" for="flexRadioDefault4"> Название </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault5" checked />
+                                        <label class="form-check-label" for="flexRadioDefault6"> Дата </label>
+                                    </div>
+                                </div>
+                                <div>
+                                    <h6 class="fs-5">Поиск</h6>
+                                    <input class="form-control" type="search" placeholder="Найти..." />
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="d-flex flex-row align-items-center justify-content-between">
+                                <button class="btn btn-primary">Применить</button>
+                                <button class="btn btn-outline-primary">Отменить</button>
+                            </div>
                         </div>
                     </div>
                 </div>
