--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -34,7 +34,7 @@
                     <div id="filter" class="collapse multi-collapse">
                         <div class="filter rounded fs-6 p-3 mb-5">
                             <div class="d-flex flex-row flex-wrap align-items-center justify-content-between">
-                                <div>
+                                <div class="m-2 m-lg-0">
                                     <h6 class="fs-5">Фильтрация</h6>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" />
@@ -49,7 +49,7 @@
                                         <label class="form-check-label" for="flexRadioDefault3"> Зарегистрированы </label>
                                     </div>
                                 </div>
-                                <div class="mx-1">
+                                <div class="m-2 m-lg-0">
                                     <h6 class="fs-5">Сортировка</h6>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4" />
@@ -60,7 +60,7 @@
                                         <label class="form-check-label" for="flexRadioDefault6"> Дата </label>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="m-2 m-lg-0">
                                     <h6 class="fs-5">Поиск</h6>
                                     <input class="form-control" type="search" placeholder="Найти..." />
                                 </div>
@@ -68,7 +68,7 @@
                             <hr />
                             <div class="d-flex flex-row align-items-center justify-content-between">
                                 <button class="btn btn-primary">Применить</button>
-                                <button class="btn btn-outline-primary">Отменить</button>
+                                <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filter" aria-expanded="false" aria-controls="filter">Отменить</button>
                             </div>
                         </div>
                     </div>
