Поправил атрибуты информации о неактивности в профиле пользователя, передал новый атрибут из контроллеров.

--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -115,16 +115,18 @@
                             <img width="20" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                         </a>
                     </h3>
-                    <p th:if="${user.isMainAdministrator}" class="text-success mb-0">Активен</p>
-                    <p th:if="${!user.isMainAdministrator}" id="info-activity" th:text="${user.activityMessage}" class="text-success" th:classappend="${user.isActive} ? 'mb-0' : 'mb-1'">Активен</p>
-                    <p th:if="${!user.isMainAdministrator}" id="info-extended-activity-whom-block" class="mb-1" th:classappend="${user.isActive} ? 'visually-hidden'">
-                        <span id="info-extended-activity-whom" th:text="${authorMessagePart}"></span>
-                        <a id="info-extended-activity-whom-full-name" href="#" th:href="@{/users/__${authorUserInformationId}__}" th:text="${authorFullName}" class="text-secondary"></a>
-                    </p>
-                    <p th:if="${!user.isMainAdministrator && comment != null}" id="info-extended-activity-comment-block" class="mb-0" th:classappend="${user.isActive} ? 'visually-hidden'">
-                        Комментарий:
-                        <span id="info-extended-activity-comment" th:text="${comment}"></span>
-                    </p>
+                    <p th:if="${user.isActive}" class="text-success mb-0">Активен</p>
+                    <div th:if="${!user.isMainAdministrator && user.isNotActive}" class="mb-0">
+                        <p id="info-inactivity" th:text="${currentInactivity.inactivityMessage}" class="text-danger mb-1"></p>
+                        <p id="info-extended-inactivity-whom-block" class="mb-1">
+                            <span id="info-extended-inactivity-whom" th:text="${currentInactivity.authorMessagePart}"></span>
+                            <a id="info-extended-inactivity-whom-full-name" href="#" th:href="@{/users/__${currentInactivity.authorUserInformationId}__}" th:text="${currentInactivity.authorFullName}" class="text-secondary"></a>
+                        </p>
+                        <p id="info-extended-inactivity-comment-block" th:if="${currentInactivity.comment != null}" class="mb-0">
+                            Комментарий:
+                            <span id="info-extended-inactivity-comment" th:text="${currentInactivity.comment}" class="text-lowercase fst-italic"></span>
+                        </p>
+                    </div>
                 </div>
             </div>
             <!---->
