--- a/src/main/resources/templates/users/modal/vacation-modal.html
+++ b/src/main/resources/templates/users/modal/vacation-modal.html
@@ -16,11 +16,11 @@
                         <form id="vacation-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="vacation-employee" class="form-label">Сотрудник</label>
-                                <input type="text" name="vacation-employee" id="vacation-employee" class="form-control" disabled />
+                                <input type="text" name="vacation-employee" id="vacation-employee" class="form-control" th:text="${user.userInformation.fullName}" disabled />
                             </div>
                             <div class="mb-3">
                                 <label for="vacation-start-date" class="form-label">Дата начала</label>
-                                <input type="date" name="vacation-start-date" id="vacation-start-date" class="form-control" />
+                                <input type="date" name="vacation-start-date" id="vacation-start-date" class="form-control" th:text="${currentDate}" disabled />
                             </div>
                             <div class="mb-3">
                                 <label for="vacation-end-date" class="form-label">Дата окончания</label>
