--- a/src/main/resources/templates/users/modal/dismissal-modal.html
+++ b/src/main/resources/templates/users/modal/dismissal-modal.html
@@ -16,7 +16,7 @@
                         <form id="dismissal-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="dismissal-employee" class="form-label">Сотрудник</label>
-                                <input type="text" name="dismissal-employee" id="dismissal-employee" class="form-control" th:text="${user.userInformation.fullName}" disabled />
+                                <input type="text" name="dismissal-employee" id="dismissal-employee" class="form-control" th:value="${user.userInformation.fullName}" disabled />
                             </div>
                             <div class="mb-4">
                                 <label for="dismissal-comment" class="form-label">Комментарий</label>
