--- a/src/main/resources/templates/users/modal/sick-leave-modal.html
+++ b/src/main/resources/templates/users/modal/sick-leave-modal.html
@@ -16,11 +16,11 @@
                         <form id="sick-leave-form" action="#" class="border rounded text-secondary fs-5 p-3">
                             <div class="mb-3">
                                 <label for="sick-leave-employee" class="form-label">Сотрудник</label>
-                                <input type="text" name="sick-leave-employee" id="sick-leave-employee" class="form-control" th:text="${user.userInformation.fullName}" disabled />
+                                <input type="text" name="sick-leave-employee" id="sick-leave-employee" class="form-control" th:value="${user.userInformation.fullName}" disabled />
                             </div>
                             <div class="mb-3">
                                 <label for="sick-leave-start-date" class="form-label">Дата начала</label>
-                                <input type="date" name="sick-leave-start-date" id="sick-leave-start-date" class="form-control" th:text="${currentDate}" disabled />
+                                <input type="date" name="sick-leave-start-date" id="sick-leave-start-date" class="form-control" th:value="${currentDate}" disabled />
                             </div>
                             <div class="mb-3">
                                 <label for="sick-leave-end-date" class="form-label">Дата окончания</label>
